initialize admin dashboard frontend

--- a/frontend/src/app/features/admin-dashboard/admin-profile/admin-profile.component.html
+++ b/frontend/src/app/features/admin-dashboard/admin-profile/admin-profile.component.html
@@ -1,1 +1,16 @@
-<p>admin-profile works!</p>
+<div class="container">
+  <h2>Hey <span>Nana</span> 👋, here is your profile details</h2>
+  <div class="profile">
+
+    <img src="/assets/images/profileImg.jpg" alt="profile image" class="profileImg">
+    <div class="content">
+    <h4>Name</h4>
+   <p>Nana Rita</p>
+    <h4>Email</h4>
+    <p>nana.com</p>
+    <h4>Phone Number</h4>
+    <p>+2541234567</p>
+    <button>Edit Profile</button>
+  </div>
+  </div>
+</div>
