--- a/frontend/src/app/features/admin-dashboard/admin-dashboard.component.html
+++ b/frontend/src/app/features/admin-dashboard/admin-dashboard.component.html
@@ -1,1 +1,12 @@
-<p>admin-dashboard works!</p>
+<div class="admin-home">
+  <app-admin-sidebar></app-admin-sidebar>
+  <div class="main-wrapper">
+    <div class="top-header">
+      <app-admin-top-bar></app-admin-top-bar>
+    </div>
+    <div class="body-content">
+      
+      <router-outlet></router-outlet>
+    </div>
+  </div>
+</div>
