--- a/frontend/src/app/features/admin-dashboard/user-management/user-management.component.html
+++ b/frontend/src/app/features/admin-dashboard/user-management/user-management.component.html
@@ -1,1 +1,37 @@
-<p>user-management works!</p>
+<div>
+  <input type="text" placeholder="Filter customers" >
+  <table >
+    <thead>
+      <tr>
+        <th>Image</th>
+        <th>Name</th>
+        <th>Email</th>
+        <th>Phone Number</th>
+        <th>Status</th>
+        <th>Actions</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr >
+        <td>
+          <img src="/assets/images/profileImg.jpg" alt="" class="customer-img">
+        </td>
+        <td>John Doe</td>
+        <td>john.com</td>
+        <td>+2542334444</td>
+        <td>Active</td>
+        <td>
+          <div class="actions">
+
+            <i class="fa fa-eye view" aria-hidden="true" ></i>
+            <i class="fa fa-pencil-square-o edit" aria-hidden="true" ></i>
+            <i class="fa fa-trash-o delete" aria-hidden="true"></i>
+          </div>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+  <ng-template #noUsers>
+    <p style="color: red; margin: 10px;">No users available.</p>
+  </ng-template>
+</div>
