--- a/frontend/src/app/features/user-dashboard/user-dashboard.component.html
+++ b/frontend/src/app/features/user-dashboard/user-dashboard.component.html
@@ -1,1 +1,44 @@
-<p>user-dashboard works!</p>
+<div class="entirePage">
+    <div class="sideBar" style="background-color: #6a0dad;">
+        <div class="heading">
+            <h1>Shoppe market</h1>
+        </div> 
+        <div class="navigation">
+            <div class="dashboard">
+            <img src="../../../icons/menu_40dp.svg" alt="">
+            <p>  Dashboard</p>
+            </div>
+            <div class="profile">
+                <img src="../../../icons/person_24dp (1).png" alt="">
+                <p>  My profile</p>
+            </div>
+            <div class="products">
+                <img src="../../../icons/person_24dp (1).png" alt="">
+                <p>  Products</p>
+            </div>
+            <div class="order">
+                <img src="../../../icons/add_shopping_cart_24dp.svg" alt="">
+                <p>  order</p>
+            </div>
+            <div class="logout">
+               <img src="../../../icons/logout_24dp (1).png" alt=""> 
+               <p>  Log out</p>
+            </div>
+        </div>  
+    </div>
+    <div class="otherPage">
+        <div class="navBar">
+            <div class="search-bar">
+                <input type="text" placeholder="search">
+                <button><img src="../../../icons/magnifying-glass.png" alt=""></button>
+            </div>
+            <div class="user-actions">
+                <a href="">Home</a>
+                <img src="../../../icons/notification.png" alt="">
+                <img src="../../../icons/cart.png" alt="">
+                <img src="../../../icons/profile.png" alt="">
+            </div>
+        </div>
+        <div class="container"></div>
+    </div>
+</div>
