--- a/frontend/src/app/features/login/login.component.html
+++ b/frontend/src/app/features/login/login.component.html
@@ -1,28 +1,41 @@
 <div class="login-page">
   <div class="error-container" *ngIf="errorMessage">{{ errorMessage }}</div>
+  <div class="success-container" *ngIf="successMessage">{{ successMessage }}</div>
 
   <div class="login-container">
     <div class="info-section">
-      <button (click)="navigateHome()">Home</button>
-      <img src="/logo.svg" alt="Logo" class="logo">
-      <h1>Shopie</h1>
-      <p>Your one-stop online shop</p>
+      <div class="section">
+        <button (click)="navigateHome()"><i class="fa fa-home" aria-hidden="true"></i></button>
+      </div>
+      <div class="section">
+        <img src="/logo.svg" alt="Logo" class="logo">
+      </div>
+      <div class="section">
+        <h1>Shopie</h1>
+        <p>Your one-stop online shop</p>
+      </div>
     </div>
 
     <div class="form-section">
       <form (ngSubmit)="onSubmit()">
-        <label for="email">Email</label>
-        <input type="email" id="email" [(ngModel)]="email" name="email" required>
-
-        <label for="password">Password</label>
-        <input type="password" id="password" [(ngModel)]="password" name="password" required>
-
-        <button type="submit">Login</button>
+        <div class="form-group">
+          <label for="email">Email *</label>
+          <input type="email" id="email" [(ngModel)]="email" name="email" autocomplete="off">
+        </div>
+        <div class="form-group">
+          <label for="password">Password *</label>
+          <input type="password" id="password" [(ngModel)]="password" name="password" autocomplete="off">
+        </div>
+        <div class="form-group">
+          <p>Forgot Password? <a (click)="navigateToForgotPassword()">Reset here</a></p>
+        </div>
+        <div class="form-group button">
+          <button type="submit">Login</button>
+        </div>
+        <div class="form-group">
+          <p>Don't have an account? <a (click)="navigateToRegister()">Register here</a></p>
+        </div>
       </form>
-      <div class="links">
-        <a (click)="navigateToForgotPassword()">Forgot Password?</a>
-        <a (click)="navigateToRegister()">Register</a>
-      </div>
     </div>
   </div>
 </div>
