--- a/frontend/src/app/features/password-reset/password-reset.component.html
+++ b/frontend/src/app/features/password-reset/password-reset.component.html
@@ -1,23 +1,37 @@
 <div class="password-reset-page">
   <div class="error-container" *ngIf="errorMessage">{{ errorMessage }}</div>
+  <div class="success-container" *ngIf="successMessage">{{ successMessage }}</div>
 
   <div class="password-reset-container">
     <div class="info-section">
-      <button (click)="navigateHome()">Home</button>
-      <img src="/logo.svg" alt="Logo" class="logo">
-      <h1>Shopie</h1>
-      <p>Your one-stop online shop</p>
+      <div class="section">
+        <button (click)="navigateHome()"><i class="fa fa-home" aria-hidden="true"></i></button>
+      </div>
+      <div class="section">
+        <img src="/logo.svg" alt="Logo" class="logo">
+      </div>
+      <div class="section">
+        <h1>Shopie</h1>
+        <p>Your one-stop online shop</p>
+      </div>
     </div>
 
     <div class="form-section">
       <form (ngSubmit)="onSubmit()">
-        <label for="password">New Password</label>
-        <input type="password" id="password" [(ngModel)]="password" name="password" required>
-
-        <label for="confirmPassword">Confirm New Password</label>
-        <input type="password" id="confirmPassword" [(ngModel)]="confirmPassword" name="confirmPassword" required>
-
-        <button type="submit">Reset Password</button>
+        <div class="form-group">
+          <label for="password">New Password *</label>
+          <input type="password" id="password" [(ngModel)]="password" name="password" autocomplete="off">
+        </div>
+        <div class="form-group">
+          <label for="confirmPassword">Confirm <br> New Password *</label>
+          <input type="password" id="confirmPassword" [(ngModel)]="confirmPassword" name="confirmPassword" autocomplete="off">
+        </div>
+        <div class="form-group button">
+          <button type="submit">Reset Password</button>
+        </div>
+        <div class="form-group">
+          <p>Remember password? <a (click)="navigateToLogin()">Login here</a></p>
+        </div>
       </form>
     </div>
   </div>
