--- a/frontend/src/app/features/product/single-product/single-product.component.html
+++ b/frontend/src/app/features/product/single-product/single-product.component.html
@@ -2,30 +2,44 @@
 
 <div class="product-details">
   <div class="product-info">
-    <img [src]="product.image" alt="{{ product.name }}">
+    <!--! <img [src]="product.images[0].url" alt="{{ product.name }}"> -->
+    <img src="/product_placeholder.svg" alt="{{ product.name }}">
     <div class="product-text">
-      <h1>{{ product.name }}</h1>
+      <h3>{{ product.name }}</h3>
       <p>{{ product.description }}</p>
       <p>${{ product.price }}</p>
-      <button>Add to Cart</button>
+      <p>{{ product.stock_quantity === 0 ? 'in stock' : 'out of stock' }}</p>
+      <button (click)="addToCart(product)">Add to Cart</button>
     </div>
   </div>
 
   <div class="product-reviews">
     <h2>Reviews</h2>
     <div *ngFor="let review of product.reviews">
-      <p>{{ review.text }}</p>
-      <p>Rating: {{ review.rating }}</p>
+      <!-- ! ? -->
+      <h3>{{ review.user?.username }}</h3>
+      <p>{{ review.comment }}</p>
+      <p>{{ review.rating }}</p>
     </div>
   </div>
 
   <div class="related-products">
     <h2>Related Products</h2>
     <div class="product-card" *ngFor="let relatedProduct of relatedProducts">
-      <img [src]="relatedProduct.image" alt="{{ relatedProduct.name }}">
-      <h3>{{ relatedProduct.name }}</h3>
-      <p>${{ relatedProduct.price }}</p>
-      <button (click)="viewProduct(relatedProduct.id)">View Details</button>
+      <div class="product-img">
+        <!--! <img [src]="relatedProduct.images[0].url" alt="{{ relatedProduct.name }}"> -->
+        <img src="/product_placeholder.svg" alt="{{ product.name }}">
+      </div>
+      <div class="product-details">
+        <h3>{{ relatedProduct.name }}</h3>
+        <p>{{ relatedProduct.description }}</p>
+        <p>${{ relatedProduct.price }}</p>
+        <p>{{ relatedProduct.stock_quantity === 0 ? 'in stock' : 'out of stock' }}</p>
+      </div>
+      <div class="action-buttons">
+        <button (click)="viewProduct(relatedProduct.id || '')">View Details</button> <!-- ! ''-->
+        <button (click)="addToCart(product)">Add to Cart</button>
+      </div>
     </div>
   </div>
 </div>
