--- a/frontend/src/app/features/reset-code-verification/reset-code-verification.component.html
+++ b/frontend/src/app/features/reset-code-verification/reset-code-verification.component.html
@@ -1,23 +1,34 @@
 <div class="reset-code-page">
   <div class="error-container" *ngIf="errorMessage">{{ errorMessage }}</div>
+  <div class="success-container" *ngIf="successMessage">{{ successMessage }}</div>
 
   <div class="reset-code-container">
     <div class="info-section">
-      <button (click)="navigateHome()">Home</button>
-      <img src="/logo.svg" alt="Logo" class="logo">
-      <h1>Shopie</h1>
-      <p>Your one-stop online shop</p>
+      <div class="section">
+        <button (click)="navigateHome()"><i class="fa fa-home" aria-hidden="true"></i></button>
+      </div>
+      <div class="section">
+        <img src="/logo.svg" alt="Logo" class="logo">
+      </div>
+      <div class="section">
+        <h1>Shopie</h1>
+        <p>Your one-stop online shop</p>
+      </div>
     </div>
 
     <div class="form-section">
       <form (ngSubmit)="onSubmit()">
-        <label for="resetCode">Enter 6-digit Code</label>
-        <input type="text" id="resetCode" [(ngModel)]="resetCode" name="resetCode" maxlength="6" required>
-        <button type="submit">Submit</button>
+        <div class="form-group">
+          <label for="resetCode">Enter<br> Reset Code *</label>
+          <input type="text" id="resetCode" [(ngModel)]="resetCode" name="resetCode" maxlength="6" autocomplete="off">
+        </div>
+        <div class="form-group button">
+          <button type="submit">Submit</button>
+        </div>
+        <div class="form-group">
+          <p>Remember password? <a (click)="navigateToLogin()">Login here</a></p>
+        </div>
       </form>
-      <div class="links">
-        <a (click)="navigateToLogin()">Login</a>
-      </div>
     </div>
   </div>
 </div>
