added more components and routes

--- a/frontend/src/app/features/user-dashboard/user-dashboard.component.html
+++ b/frontend/src/app/features/user-dashboard/user-dashboard.component.html
@@ -10,7 +10,7 @@
   </div>
 </div>
 
-<div class="entirePage">
+<!-- <div class="entirePage">
     <div class="sideBar" style="background-color: #6a0dad;">
         <div class="heading">
             <h1>Shoppe market</h1>
@@ -53,4 +53,4 @@
         </div>
         <div class="container"></div>
     </div>
-</div>
+</div> -->
