--- a/frontend/src/app/features/user-dashboard/user-top-bar/user-top-bar.component.html
+++ b/frontend/src/app/features/user-dashboard/user-top-bar/user-top-bar.component.html
@@ -1,3 +1,14 @@
 <div class="topbar">
-  <ng-content></ng-content>
+  <div class="navBar">
+    <div class="search-bar">
+        <input type="text" placeholder="search">
+        <button><img src="../../../icons/magnifying-glass.png" alt=""></button>
+    </div>
+    <div class="user-actions">
+        <a href="">Home</a>
+        <img src="../../../icons/notification.png" alt="">
+        <img src="../../../icons/cart.png" alt="">
+        <img src="../../../icons/profile.png" alt="">
+    </div>
+</div>
 </div>
