--- a/frontend/src/app/features/user-dashboard/user-dashboard.component.css
+++ b/frontend/src/app/features/user-dashboard/user-dashboard.component.css
@@ -6,6 +6,8 @@
   margin-left: 250px;
   width: calc(100% - 250px);
   transition: margin-left 0.3s, width 0.3s;
+  display: flex;
+  flex-direction: column;
 }
 
 .main-content.collapsed {
@@ -17,14 +19,13 @@
   margin-top: 50px;
   padding: 20px;
 }
-img{
+/* img{
     width: 15px;
 }
 .entirePage{
    width: 100%;
    height: 100%;
    display: flex;
-   /* background-color: aqua;  */
 }
 .sideBar{
    width: 18%;
@@ -105,4 +106,4 @@ img{
 }
 .user-actions a{
     text-decoration: none ;
-}
+} */
