--- a/frontend/src/app/features/user-dashboard/user-sidebar/user-sidebar.component.css
+++ b/frontend/src/app/features/user-dashboard/user-sidebar/user-sidebar.component.css
@@ -1,4 +1,4 @@
-.sidebar {
+/* .sidebar {
   width: 250px;
   background-color: #6a0dad;
   color: white;
@@ -38,4 +38,35 @@
 
 .sidebar nav ul li a:hover {
   background-color: #4a0072;
+} */
+
+
+.sideBar{
+  width:19vw;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+  margin-right: 2%;
+  position: fixed;
+  transition: width 0.3s;
+}
+.sideBar div{
+   margin-left: 3%;
+}
+.navigation div{
+   display: flex;
+   align-items: center;
+   height: 5vh;
+   width: auto;
+   gap: 2%;
+   margin-bottom: 3px;
+}
+.navigation div:hover{
+   background-color: #39234975;
+}
+.navigation div p{
+   color: white;
+}
+img{
+  width: 15px;
 }
