fetch products dynamically

--- a/frontend/src/app/features/admin-dashboard/admin-logout/admin-logout.component.html
+++ b/frontend/src/app/features/admin-dashboard/admin-logout/admin-logout.component.html
@@ -1,1 +1,7 @@
-<p>admin-logout works!</p>
+<div class="container">
+<p>Are you sure you want to logout?</p>
+<div class="btns">
+  <button class="acceptBtn">Yes</button>
+  <button class="denyBtn">No</button>
+</div>
+</div>
