--- a/frontend/src/app/features/admin-dashboard/admin-sidebar/admin-sidebar.component.css
+++ b/frontend/src/app/features/admin-dashboard/admin-sidebar/admin-sidebar.component.css
@@ -1,5 +1,4 @@
 
-
 .sidebar {
   width: 250px;
   align-items: center;
@@ -8,6 +7,7 @@
   color: white;
   display: flex;
   flex-direction: column;
+  align-items: center;
   justify-content: space-between;
   /* position: fixed;
   top: 0; */
@@ -52,6 +52,7 @@
 .sidebar-menu {
   display: flex;
   flex-direction: column;
+  align-items: center;
   align-items: center;
   justify-content: center;
   list-style: none;
@@ -99,12 +100,10 @@
 background-color:blueviolet ;
 border-radius: 5px;
 color: #fff;
-padding:10px 20px;
+padding:10px;
 text-decoration: none;
 display: flex;
 align-items: center;
-
-gap: 10px;
 }
 .logout a i{
   font-size: 25px;
@@ -154,4 +153,3 @@ gap: 10px;
 .sidebar.collapsed .sidebar-item a i {
   margin: 0 auto;
 }
-
