--- a/frontend/src/app/features/admin-dashboard/admin-sidebar/admin-sidebar.component.html
+++ b/frontend/src/app/features/admin-dashboard/admin-sidebar/admin-sidebar.component.html
@@ -1,4 +1,4 @@
-<<<<<<< HEAD
+
 <div class="sidebar" [ngClass]="{'collapsed': isCollapsed, 'expanded-mobile': !isCollapsed}">
   <div class="sidebar-header">
     <div class="profile-section" routerLink="profile">
@@ -16,34 +16,14 @@
           <a routerLink="products"><i class="fa fa-cart-plus" aria-hidden="true"></i> <span>Products</span></a>
       </li>
       <li class="sidebar-item">
-          <a routerLink="customers"><i class="fa fa-users" aria-hidden="true"></i><span>Customers</span></a>
+          <a routerLink="users"><i class="fa fa-users" aria-hidden="true"></i><span>Customers</span></a>
       </li>
       <li class="sidebar-item">
           <a routerLink="orders"><i class="fa fa-money" aria-hidden="true"></i> <span>Orders</span></a>
       </li>
       <li class="logout">
-          <a routerLink="login"><i class="fa fa-sign-out" aria-hidden="true"></i><span>Logout</span></a>
+          <a routerLink="logout"><i class="fa fa-sign-out" aria-hidden="true"></i><span>Logout</span></a>
       </li>
   </ul>
 
 
-=======
-<div class="sidebar" [class.collapsed]="isCollapsed">
-  <button (click)="toggleSidebar()">☰</button>
-  <nav *ngIf="!isCollapsed">
-    <ul>
-      <!-- <li><a routerLink="/admin/dashboard/profile">Profile</a></li>
-      <li><a routerLink="/admin/dashboard/users">Users</a></li>
-      <li><a routerLink="/admin/dashboard/products">Products</a></li>
-      <li><a routerLink="/admin/dashboard/categories">Categories</a></li>
-      <li><a routerLink="/admin/dashboard/logout">Logout</a></li> -->
-
-      <li><a href="/admin/dashboard/profile">Profile</a></li>
-      <li><a href="/admin/dashboard/users">Users</a></li>
-      <li><a href="/admin/dashboard/products">Products</a></li>
-      <li><a href="/admin/dashboard/categories">Categories</a></li>
-      <li><a href="/admin/dashboard/logout">Logout</a></li>
-    </ul>
-  </nav>
->>>>>>> Alvin
-</div>
