--- a/frontend/src/app/features/admin-dashboard/admin-top-bar/admin-top-bar.component.css
+++ b/frontend/src/app/features/admin-dashboard/admin-top-bar/admin-top-bar.component.css
@@ -1,15 +1,10 @@
-.topbar {
-  width: 100%;
-  height: 50px;
-  background-color: #6a0dad;
-  color: white;
-  position: fixed;
-  top: 0;
-  left: 0;
+header
+{
+  height: 12vh;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0 20px;
-  transition: width 0.3s;
-  z-index: 1000;
+}
+.header h1{
+  margin-left: 10px;
 }
