--- a/frontend/src/app/features/product/product-list/product-list.component.css
+++ b/frontend/src/app/features/product/product-list/product-list.component.css
@@ -1,9 +1,30 @@
 .product-listing {
   padding: 20px;
+  padding-top: 70px;
 }
 
 .filters {
   margin-bottom: 20px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.filters label {
+  font-weight: bold;
+}
+
+.filters select {
+  padding: 5px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  background-color: #ffffff;
+  transition: border-color 0.3s;
+}
+
+.filters select:focus {
+  border-color: #6a0dad;
+  outline: none;
 }
 
 .product-grid {
@@ -18,11 +39,80 @@
   border-radius: 5px;
   width: 200px;
   text-align: center;
+  transition: transform 0.3s, box-shadow 0.3s, background-color 0.3s, color 0.3s;
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  gap: 5px;
+}
+
+.product-card:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  background-color: #f5f5f5;
+  color: #6a0dad;
+}
+
+.product-img,
+.product-details,
+.action-buttons {
+  width: 100%;
 }
 
 .product-card img {
   max-width: 100%;
   height: auto;
+  border-radius: 5px;
+}
+
+.product-details {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  gap: 10px;
+}
+
+.product-details h3 {
+  font-size: 18px;
+}
+
+.product-details p {
+  color: #555;
+}
+
+.product-details p.price {
+  font-size: 16px;
+  font-weight: bold;
+  /* color: #333; */
+  color: #6a0dad;
+}
+
+.product-details p.stock-status {
+  font-size: 14px;
+  font-weight: bold;
+}
+
+.action-buttons {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 5px 0;
+}
+
+.action-buttons button {
+  border: none;
+  width: 80%;
+  border-radius: 15px;
+  padding: 5px 0;
+  color: #ffffff;
+  background-color: #6a0dad;
+}
+
+.action-buttons button:hover {
+  background-color: #8a2be2;
 }
 
 .pagination {
@@ -32,14 +122,19 @@
 }
 
 .pagination button {
-  margin: 0 5px;
   padding: 5px 10px;
   border: none;
   background-color: #6a0dad;
   color: white;
   cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.pagination button:hover:not(:disabled) {
+  background-color: #8a2be2;
 }
 
 .pagination button:disabled {
   background-color: #ccc;
+  cursor: not-allowed;
 }
