--- a/frontend/src/app/features/product/product-list/product-list.component.html
+++ b/frontend/src/app/features/product/product-list/product-list.component.html
@@ -13,7 +13,7 @@
   </div>
 
   <div class="product-grid">
-    <div class="product-card" *ngFor="let product of paginatedProducts">
+    <div class="product-card" *ngFor="let product of paginatedProducts" (click)="viewProduct(product.id || '')">
       <div class="product-img">
         <!--! <img [src]="product.images[0].url" alt="{{ product.name }}"> -->
         <img src="/product_placeholder.svg" alt="{{ product.name }}">
@@ -21,11 +21,10 @@
       <div class="product-details">
         <h3>{{ product.name }}</h3>
         <p>{{ product.description }}</p>
-        <p>${{ product.price }}</p>
-        <p>{{ product.stock_quantity === 0 ? 'in stock' : 'out of stock' }}</p>
+        <p class="price">${{ product.price }}</p>
+        <p>{{ product.stock_quantity !== 0 ? 'in stock' : 'out of stock' }}</p>
       </div>
       <div class="action-buttons">
-        <button (click)="viewProduct(product.id || '')">View Details</button> <!-- ! ''-->
         <button (click)="addToCart(product)">Add to Cart</button>
       </div>
     </div>
