--- a/frontend/src/app/features/product/single-product/single-product.component.css
+++ b/frontend/src/app/features/product/single-product/single-product.component.css
@@ -1,20 +1,66 @@
 .product-details {
   padding: 20px;
+  padding-top: 70px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: auto;
+  gap: 30px;
+}
+
+.product-info,
+.product-reviews,
+.related-products {
+  /* border: 1px solid red; */
+  width: 100%;
+  height: 100%;
 }
 
 .product-info {
+  padding: 30px;
   display: flex;
-  gap: 20px;
-  margin-bottom: 40px;
+  align-items: center;
+  justify-content: center;
+  gap: 15px;
+  border-radius: 15px;
+  transition: transform 0.3s, box-shadow 0.3s, background-color 0.3s, color 0.3s;
+  /* box-shadow: 0 0 5px 5px rgba(0, 0, 0, 0.1); */
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+}
+
+.product-info:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  background-color: #f5f5f5;
+  color: #6a0dad;
 }
 
 .product-info img {
-  max-width: 300px;
+  width: 50%;
   height: auto;
+  max-height: 100%;
+  border-radius: 5px;
 }
 
 .product-text {
-  flex: 1;
+  width: 50%;
+}
+
+.product-text h1 {
+  font-size: 24px;
+  color: #333;
+  margin-bottom: 10px;
+}
+
+.product-text p {
+  margin-bottom: 10px;
+  color: #555;
+}
+
+.product-text .price {
+  font-size: 20px;
+  font-weight: bold;
+  color: #6a0dad;
+  margin-bottom: 20px;
 }
 
 .product-reviews {
@@ -50,9 +96,19 @@
   text-align: center;
   margin-right: 10px;
   margin-bottom: 10px;
+  transition: transform 0.3s, box-shadow 0.3s, background-color 0.3s, color 0.3s;
+  cursor: pointer;
+}
+
+.related-products .product-card:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  background-color: #f5f5f5;
+  color: #6a0dad;
 }
 
 .related-products .product-card img {
   max-width: 100%;
   height: auto;
+  border-radius: 5px;
 }
