--- a/frontend/src/app/features/product/single-product/single-product.component.html
+++ b/frontend/src/app/features/product/single-product/single-product.component.html
@@ -2,43 +2,30 @@
 
 <div class="product-details">
   <div class="product-info">
-    <!--! <img [src]="product.images[0].url" alt="{{ product.name }}"> -->
     <img src="/product_placeholder.svg" alt="{{ product.name }}">
     <div class="product-text">
-      <h3>{{ product.name }}</h3>
+      <h1>{{ product.name }}</h1>
       <p>{{ product.description }}</p>
-      <p>${{ product.price }}</p>
-      <p>{{ product.stock_quantity === 0 ? 'in stock' : 'out of stock' }}</p>
-      <button (click)="addToCart(product)">Add to Cart</button>
+      <p class="price">${{ product.price }}</p>
+      <p class="stock-status">{{ product.stock_quantity > 0 ? 'In stock' : 'Out of stock' }}</p>
     </div>
   </div>
 
   <div class="product-reviews">
     <h2>Reviews</h2>
-    <div *ngFor="let review of product.reviews">
-      <!-- ! ? -->
-      <h3>{{ review.user?.username }}</h3>
+    <div *ngFor="let review of reviews">
+      <p><strong>{{ review.user?.username }}</strong></p>
       <p>{{ review.comment }}</p>
-      <p>{{ review.rating }}</p>
     </div>
   </div>
 
   <div class="related-products">
     <h2>Related Products</h2>
-    <div class="product-card" *ngFor="let relatedProduct of relatedProducts">
-      <div class="product-img">
-        <!--! <img [src]="relatedProduct.images[0].url" alt="{{ relatedProduct.name }}"> -->
-        <img src="/product_placeholder.svg" alt="{{ product.name }}">
-      </div>
+    <div class="product-card" *ngFor="let relatedProduct of relatedProducts" (click)="viewProduct(relatedProduct.id || '')">
+      <img src="/product_placeholder.svg" alt="{{ relatedProduct.name }}">
       <div class="product-details">
         <h3>{{ relatedProduct.name }}</h3>
-        <p>{{ relatedProduct.description }}</p>
-        <p>${{ relatedProduct.price }}</p>
-        <p>{{ relatedProduct.stock_quantity === 0 ? 'in stock' : 'out of stock' }}</p>
-      </div>
-      <div class="action-buttons">
-        <button (click)="viewProduct(relatedProduct.id || '')">View Details</button> <!-- ! ''-->
-        <button (click)="addToCart(product)">Add to Cart</button>
+        <p class="price">${{ relatedProduct.price }}</p>
       </div>
     </div>
   </div>
