--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,15 +1,15 @@
-/* You can add global styles to this file, and also import other style files */
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-html,body{
-  height: 100%;
-}
-body{
-  margin: 0;
-  font-family: sans-serif;
-  background-color: #111111;
+body {
+  width: 100vw;
+  height: 100vh;
+  /* display: flex; */
+  /* flex-direction: column; */
+  /* align-items: center; */
+  /* justify-content: space-evenly; */
+  /* overflow: hidden; */
 }
