display of products

--- a/frontend/src/app/features/user-dashboard/user-sidebar/user-sidebar.component.html
+++ b/frontend/src/app/features/user-dashboard/user-sidebar/user-sidebar.component.html
@@ -16,7 +16,7 @@
 </div> -->
 <div class="sideBar" style="background-color: #6a0dad;">
   <div class="heading">
-      <h1>Shoppe market</h1>
+      <h1>Shoppie market</h1>
   </div> 
   <div class="navigation">
       
@@ -24,7 +24,7 @@
           <img src="../../../icons/person_24dp (1).png" alt="">
           <p>  My profile</p>
       </div>
-      <div class="products">
+      <div class="products" routerLink="product">
           <img src="../../../icons/person_24dp (1).png" alt="">
           <p>  Products</p>
       </div>
