--- a/frontend/src/app/features/user-dashboard/user-sidebar/user-sidebar.component.html
+++ b/frontend/src/app/features/user-dashboard/user-sidebar/user-sidebar.component.html
@@ -25,11 +25,15 @@
           <p>  My profile</p>
       </div>
       <div class="products" routerLink="product">
-          <img src="../../../icons/person_24dp (1).png" alt="">
+          <img src="../../../icons/production_quantity_limits_24dp_FILL0_wght400_GRAD0_opsz24.png" alt="">
           <p>  Products</p>
       </div>
+      <div class="cart" routerLink="cart">
+        <img src="../../../icons/add_shopping_cart_24dp.svg" alt="">
+        <p>Cart</p>
+      </div>
       <div class="order" routerLink="orders">
-          <img src="../../../icons/add_shopping_cart_24dp.svg" alt="">
+          <img src="../../../icons/orders_24dp_FILL0_wght400_GRAD0_opsz24.png" alt="">
           <p>  order</p>
       </div>
       <div class="logout" routerLink="logout">
