--- a/frontend/src/app/features/admin-dashboard/admin-logout/admin-logout.component.css
+++ b/frontend/src/app/features/admin-dashboard/admin-logout/admin-logout.component.css
@@ -1,7 +1,7 @@
 .container
 {
   background: #313131;
-  width: 80%;
+  text-align: center;
   height: 50vh;
   display: flex;
   flex-direction: column;
