--- a/frontend/src/app/features/admin-dashboard/product-management/product-management.component.html
+++ b/frontend/src/app/features/admin-dashboard/product-management/product-management.component.html
@@ -1,9 +1,71 @@
 <div class="wrapper">
+
+
+
   <div class="header">
     <i class="fa fa-plus-square addBtn" aria-hidden="true" (click)="showAddModal = true"></i>
+    <div *ngIf="updateMsg" class="success">{{ updateSuccessMessage }}</div>
+    <div *ngIf="deleteMsg" class="success">{{ deleteSuccessMessage }}</div>
     <input type="text" placeholder="Filter products">
   </div>
 
+  <!-- Add Product Modal -->
+  <div class="modal" *ngIf="showAddModal">
+    <div class="success" *ngIf="createSuccess">Created A Product Successfully</div>
+    <div class="error" *ngIf="createError">Error Occurred While Creating Product</div>
+    <div class="modal-content">
+      <i class="fa fa-times close" (click)="closeAddModal()" aria-hidden="true"></i>
+      <div>
+        <form [formGroup]="createProductForm" (ngSubmit)="addProduct()">
+
+            <label for="name">Product Name</label>
+            <input type="text" formControlName="name">
+            <div *ngIf="createProductForm.get('name')?.invalid && (createProductForm.get('name')?.dirty || createProductForm.get('name')?.touched)" class="validationError">
+              Product name is required
+            </div>
+
+            <label for="description">Description</label>
+             <textarea  cols="30" rows="5"></textarea>
+            <div *ngIf="createProductForm.get('description')?.invalid && (createProductForm.get('description')?.dirty || createProductForm.get('description')?.touched)" class="validationError">
+              Product description is required
+            </div>
+
+            <label for="category">Category:</label>
+            <select (change)="onCategoryChange($event)" formControlName="category">
+              <option *ngFor="let category of categoryList" [value]="category.id">{{ category.name }}</option>
+            </select>
+
+            <label for="price">Price</label>
+            <input type="number" formControlName="price">
+            <div *ngIf="createProductForm.get('price')?.invalid && (createProductForm.get('price')?.dirty || createProductForm.get('price')?.touched)" class="validationError">
+              Price is required
+            </div>
+
+
+
+            <label for="stock">Stock</label>
+            <input type="number" formControlName="stock_quantity">
+            <div *ngIf="createProductForm.get('stock_quantity')?.invalid && (createProductForm.get('stock_quantity')?.dirty || createProductForm.get('stock_quantity')?.touched)" class="validationError">
+              Stock is required
+            </div>
+
+
+          <div class="mb-5">
+            <label for="images">Images</label>
+            <input type="file" (change)="getImagesUrl($event)" name="images" />
+            <span class="mt-2" *ngIf="isLoading">
+              <div role="status">
+                <span class="sr-only">Loading...</span>
+              </div>
+            </span>
+          </div>
+          <button type="submit">Create Product</button>
+        </form>
+      </div>
+    </div>
+  </div>
+
+  <!-- Products Table -->
   <div class="table-container">
     <table class="responsive-table">
       <thead>
@@ -16,16 +78,15 @@
         </tr>
       </thead>
       <tbody *ngIf="paginatedProducts.length > 0">
-        <tr *ngFor="let product of paginatedProducts">
-          <!-- <td><img src="/product_placeholder.svg" alt="" class="productImg"></td> -->
+        <tr *ngFor="let product of paginatedProducts; let i = index">
           <td>{{ product.name }}</td>
           <td>{{ product.price }}</td>
-          <td>{{ product.category }}</td>
+          <td>{{ product.category?.name }}</td>
           <td>{{ product.stock_quantity }}</td>
           <td class="actions">
-            <i class="fa fa-eye view" aria-hidden="true"></i>
-            <i class="fa fa-pencil-square-o edit" aria-hidden="true"></i>
-            <i class="fa fa-trash-o delete" aria-hidden="true"></i>
+            <i class="fa fa-eye view" aria-hidden="true" (click)="navigateToProductDetails(i)"></i>
+            <i class="fa fa-pencil-square-o edit" aria-hidden="true" (click)="openUpdateModal(product)"></i>
+            <i class="fa fa-trash-o delete" aria-hidden="true" (click)="openDeleteModal(product.id)"></i>
           </td>
         </tr>
       </tbody>
@@ -37,57 +98,43 @@
     </div>
   </div>
 
-  <div class="modal" *ngIf="showAddModal">
-    <div class="success" *ngIf="createSuccess">Created A Product Successfully</div>
-    <div class="error" *ngIf="createError">Error Occurred While Creating Product</div>
+  <!-- Delete Confirmation Modal -->
+  <div class="modal" *ngIf="showDeleteModal">
     <div class="modal-content">
-      <i class="fa fa-times close" (click)="closeAddModal()" aria-hidden="true"></i>
-      <div>
-        <form [formGroup]="createProductForm" (ngSubmit)="addProduct()">
-          <div>
-            <label for="name">Product Name</label>
-            <input type="text" formControlName="name">
-            <div *ngIf="createProductForm.get('name')?.invalid && (createProductForm.get('name')?.dirty || createProductForm.get('name')?.touched)" class="validationError">
-              Product name is required
-            </div>
-          </div>
+      <i class="fa fa-times close" (click)="closeDeleteModal()" aria-hidden="true"></i>
+      <p>Are you sure you want to delete this product?</p>
+      <button (click)="confirmDelete()" style="background-color: steelblue; border: none; padding: 10px; border-radius: 10px;">Yes</button>
+      <button (click)="closeDeleteModal()" style="background-color: rgb(248, 140, 140); border: none; padding: 10px; border-radius: 10px;">No</button>
+    </div>
+  </div>
 
-          <div>
-            <label for="price">Price</label>
-            <input type="number" formControlName="price">
-            <div *ngIf="createProductForm.get('price')?.invalid && (createProductForm.get('price')?.dirty || createProductForm.get('price')?.touched)" class="validationError">
-              Price is required
-            </div>
-          </div>
+  <!-- Update Product Modal -->
+  <div class="modal" *ngIf="showUpdateModal">
+    <div class="modal-content">
+      <i class="fa fa-times close" (click)="closeUpdateModal()" aria-hidden="true"></i>
+      <form [formGroup]="createProductForm" (ngSubmit)="updateProduct(product_id,createProductForm.value)">
+        <label for="name">Name:</label>
+        <input type="text" id="name" formControlName="name">
 
-          <div>
-            <label for="category">Category</label>
-            <input type="text" formControlName="category">
-            <div *ngIf="createProductForm.get('category')?.invalid && (createProductForm.get('category')?.dirty || createProductForm.get('category')?.touched)" class="validationError">
-              Category is required
-            </div>
-          </div>
+        <label for="description">Description:</label>
+        <textarea id="description" cols="30" rows="5" formControlName="description"></textarea>
 
-          <div>
-            <label for="stock">Stock</label>
-            <input type="number" formControlName="stock">
-            <div *ngIf="createProductForm.get('stock')?.invalid && (createProductForm.get('stock')?.dirty || createProductForm.get('stock')?.touched)" class="validationError">
-              Stock is required
-            </div>
-          </div>
+        <label for="category">Category:</label>
+        <select (change)="onCategoryChange($event)" formControlName="category">
+          <option *ngFor="let category of categoryList" [value]="category.id">{{ category.name }}</option>
+        </select>
 
-          <div class="mb-5">
-            <label for="images">Images</label>
-            <input type="file" (change)="getImagesUrl($event)" minlength="8" name="images" />
-            <span class="mt-2" *ngIf="isLoading">
-              <div role="status">
-                <span class="sr-only">Loading...</span>
-              </div>
-            </span>
-          </div>
-          <button type="submit">Create Product</button>
-        </form>
-      </div>
+        <label for="price">Price:</label>
+        <input type="number" formControlName="price">
+
+        <label for="stock">Stock:</label>
+        <input type="number" id="stock" formControlName="stock_quantity">
+
+        <label for="image">Image:</label>
+        <input type="file" (change)="getImagesUrl($event)">
+
+        <button type="submit">Update</button>
+      </form>
     </div>
   </div>
 </div>
