--- a/frontend/src/app/shared/components/header/header.component.html
+++ b/frontend/src/app/shared/components/header/header.component.html
@@ -16,8 +16,7 @@
       <button class="btn login" (click)="navigateLogin()">Login</button>
       <button class="btn register" (click)="navigateRegister()">Register</button>
       <div class="cart-icon">
-        <!-- ! navigate to cart -->
-        <span class="cart-count">0</span>
+        <span class="cart-count" (click)="navigateCart()"><i class="fa fa-shopping-cart" aria-hidden="true"></i></span>
       </div>
     </div>
   </div>
