--- a/frontend/src/app/features/cart-item/cart-item.component.css
+++ b/frontend/src/app/features/cart-item/cart-item.component.css
@@ -1,5 +1,32 @@
 .cart {
   padding: 20px;
+  padding-top: 70px;
+}
+
+.error-container {
+  z-index: 999;
+  position: fixed;
+  max-width: 300px;
+  top: 70px;
+  right: 45px;
+  background-color: #f8d7da;
+  color: #721c24;
+  padding: 10px;
+  border: 1px solid #f5c6cb;
+  border-radius: 5px;
+}
+
+.success-container {
+  z-index: 999;
+  position: fixed;
+  max-width: 300px;
+  top: 70px;
+  right: 45px;
+  background-color: #d4edda;
+  color: #155724;
+  padding: 10px;
+  border: 1px solid #c3e6cb;
+  border-radius: 5px;
 }
 
 .cart h1 {
