--- a/frontend/src/app/features/cart-item/cart-item.component.html
+++ b/frontend/src/app/features/cart-item/cart-item.component.html
@@ -1,6 +1,9 @@
 <app-header></app-header>
 
 <div class="cart">
+  <div class="error-container" *ngIf="errorMessage">{{ errorMessage }}</div>
+  <div class="success-container" *ngIf="successMessage">{{ successMessage }}</div>
+
   <h1>Your Cart</h1>
   <table>
     <thead>
@@ -15,15 +18,17 @@
     </thead>
     <tbody>
       <tr *ngFor="let item of cartItems">
-        <td><img [src]="item.product.image" alt="{{ item.product.name }}"></td>
-        <td>{{ item.product.name }}</td>
+        <!-- <td><img [src]="item.product?.images[0].url" alt="{{ item.product?.name }}"></td> -->
+        <td><img src="/product_placeholder.svg" alt="{{ item.product?.name }}"></td>
+        <td>{{ item.product?.name }}</td>
         <td>
-          <input type="number" [(ngModel)]="item.quantity" (change)="updateQuantity(item)">
+          <input type="number" [(ngModel)]="item.quantity" (change)="updateQuantity(item.id || '', item)" min="1">
         </td>
-        <td>${{ item.product.price }}</td>
-        <td>${{ item.product.price * item.quantity }}</td>
+        <td>${{ item.product?.price }}</td>
+        <!-- <td>${{ item.subtotal }}</td> -->
+        <td>${{ (item.product?.price ?? 0) * (item.quantity ?? 0) }}</td>
         <td>
-          <button (click)="removeFromCart(item)">Remove</button>
+          <button (click)="removeFromCart(item.id || '')">Remove</button>
         </td>
       </tr>
     </tbody>
